Bug 564151 nsHTMLEditor::HasFocus() failed if <HTML> is editable r=smaug